# ProjectPrismarine

./: .gitignore  .style.yapf  Cargo.toml  LICENSE  Pipfile  PrismarineCore.py  Prismarine_Core.py  ProjectPrismarine.db  README.md  TODO.md  core.py  main.db  notes.md  prisbot.toml.example  profile.db  requirements.txt  run_bin.py  token.txt  weapons.py
asset_scripts/: asset_insert.py  assets.db  clothing.py  gear_abilities.py  headgear.py  specials.py
assets/: __init__.py  assets.db
assets/data/: __init__.py  abilities.py  clothing.json  clothing.py  headgear.json  headgear.py  shoes.json  shoes.py  skills.json  skills.py  specials.json  specials.py  subs.json  subs.py  weapons.json  weapons.py
data/: asset_db.sql  db.sql  main_db.sql  schema.sql
data/statements/gear/abilities/: select.sql
data/statements/gear/clothes/: select.sql
data/statements/gear/head/: select.sql
data/statements/gear/main_weapons/: select.sql
data/statements/gear/shoes/: select.sql
data/statements/gear/special_weapons/: select.sql
data/statements/gear/sub_weapons/: select.sql
data/statements/player/: insert.sql  select.sql  update.sql
modules/: Moderation.py  Server Config.py  composer.py  decoder.py  encode.py  help.py  loadout.py  loadout_system.py  main.py  misc.py  mod.py  moderation.py  profiler.py  put_weapons.py  server_config.py  splatnet.py  system.py  weapons.json  weapons.py
scripts/: README.md  asset_db_gen.rb
src/: config.py  config_example.py  core.py  main.rs  test_ld_gen.py
src/commands/: announce.py  ban.py  changename.py  credits.py  delete.py  kick.py  logout.py  ping.py  prune.py  send.py  user.py
src/modules/: developer.py  meta.rs  mod.rs  player.py  player.rs  scrim.py  sudo.rs  team.py  team.rs
src/utils/: db_handler.py  decoder.py  loadout_gen.py  misc.rs  mod.rs
src/utils/db/: loadout.rs  mod.rs  model_tests.rs  models.rs  player.rs  team.rs
templates/: module.py
weapons_scripts/: put_weapons.py
