[package]
name = "project_prismarine"
version = "0.0.1-R"
authors = ["Prismarine Bluefall <sbisonol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
chrono = "0.4"
reqwest = "0.9"
dotenv = "0.14"
serde_json = "1.0"
postgres = "0.15"
postgres-derive = "0.3"

[dependencies.serenity]
version = "0.7"
features = ["framework", "standard_framework"]

[dependencies.discord-bots-org]
version = "0.1"
default-features = false
features = [ "reqwest-sync-support" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
